# foobar

./: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
launch/: asus_xtion_debian_openni2.launch  blackflea.launch  curb_detect.launch  curb_detect.launch~  dancux.launch  dancux_registered.launch  dancux_registered_asus.launch  dancux_registered_compressed.launch  depth_registered.launch.xml  depth_registered_asus.launch.xml  depth_registered_rgbd.launch.xml  fusiono_gmapping.launch  hdr_cam.launch  isera_laser_filter.launch  isera_laser_filter_conf.yaml  onering_to_laserscan.launch  online_localization.launch  plicp_dancux.launch  plicp_trackped.launch  processing.launch.xml  processing_asus.launch.xml  processing_rgbd.launch.xml  ptcloud_to_laserscan.launch  redis_ros_egomotion.launch  rtabmap.launch  rtabmap_asus.launch  sanwu_gmapping.launch  sanwu_move_base.launch  sanwu_onloc.launch  slam_gmapping.launch  static_tf.launch  stereo_odom.launch  stereo_to_ptcloud.launch  uncompress_and_process_rgbd_asus.launch  uncompress_rgbd.launch  uncompress_rgbd_throttled.launch  v034m.launch  velodyne_imu.launch  webcam.launch  webcam_chinese.launch  (+5 more)
msg/: Canbus.msg  Esr_track.msg  GraphLink.msg  GraphNode.msg  GraphStruct.msg  SeqPose.msg  SeqPoseArray.msg
scripts/: .can_wrapper_ros.py.swp  .radar_preprocess.py.swp  RadarMsgs.py  RadarMsgsCython.pyx  RadarProcess.py  RadarProcessor.py  RadarSync.py  ServerSolution.py  alphard_egomotion_talker_rosredis.py  alphard_egomotion_test.py  can_test_msg.py  can_test_send_ros.py  can_wrapper.py  canbusrosbag_to_txt.py  check_canbus_data.py  configure_canbusnet.bash  dump.rdb  extract_img_from_bag.py  image_convert.py  image_process.py  image_process.py~  kvhtalker.py  point_cloud_repub.py  radar_conf.yaml  radar_conf_dump.yaml  radar_conf_sms.yaml  radar_conf_test.yaml  radar_console.py  radar_display.py  radar_gui.py  radar_preprocess.py  radar_read_param.py  radar_rviz.py  radar_rviz.rviz  radar_rviz.vcg  setup_cython.py  start_radar.bash  stop_radar.bash  test_can_matrix.ipynb  test_radar_load_replay.bash
src/: .cloud_test_crf.cpp.swp  .coin-flipping.tex.swp  .swp  _rubish.cpp  cloud_extract_one_ring.cpp  cloud_filter _multi_backup20150723.cpp  cloud_filter.cpp  cloud_filter_multi_backup.cpp  cloud_filter_multi_sorted_20150724.cpp  cloud_filter_one_ring.cpp  cloud_filter_one_ring_debug.cpp  cloud_filter_one_ring_finetuned.cpp  cloud_repub.cpp  cloud_test_crf.cpp  cloud_util.cpp  cloud_util.h  cloudutil.h  coin-flipping.tex  common.cpp  common.h  data_types.h  debug_print.hpp  debug_print_common.hpp  image_saver.cpp  ls-R  odom_to_tf.cpp  qui.cpp  ring_process.cpp  ring_process.h  tags  velo_2d.cpp
src/data/: .velo_data.cpp.swo  .velo_data.cpp.swp  velo_data.cpp  velo_data.h
